# Qt

./: CMakeLists.txt  CMakeLists.txt.user.7da33f4  CMakeLists.txt.user.f5f333b  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  menu.ui  resours.qrc
